<resources>
    <string name="app_name">Calculator</string>
    <string name="enter_second_value">Enter second value</string>
    <string name="enter_first_value">Enter first value</string>
    <string name="button">+</string>
    <string name="button2">-</string>
    <string name="button3">x</string>
    <string name="button4">/</string>
    <string name="made_with_by_kaif">Made with 💖 by Kaif</string>
</resources>