<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="115dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        tools:ignore="ContentDescription"
        app:srcCompat="@drawable/calculator"
        android:contentDescription="TODO"
         />

    <EditText
        android:id="@+id/enFirstValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_first_value"
        android:inputType="numberSigned"
        android:padding="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/enSecondValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enter_second_value"
        android:inputType="numberSigned"
        android:padding="20dp"
        android:textStyle="bold"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="6dp"
        android:text="@string/button"
        android:textColorHighlight="#AA0C0C"
        android:textColorLink="#9A2525"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/button2"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/button3"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/button4"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFooterText"
        android:layout_width="199dp"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/made_with_by_kaif"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

</LinearLayout>